--- a/index.html
+++ b/index.html
@@ -14,22 +14,32 @@
 <body>
     <div id="root">
         <header class="header">
-            <img class="logo" src="./img/tooth.png" alt="image">
-            <h1>CityCentre стоматологія</h1>
+            <img class="logo" src="./img/tooth.png" alt="image" />
+            <h1>Cтоматологія в CityCentre</h1>
         </header>
-        <span>запис на прийом та безкоштовна консультація:</span>
-        <div class="connetions">
-            <a title="Telegram" href="tg://resolve?domain=@RomanM1989"><img class="connections__img"
-                    src="./img/connections.jpg" alt="images"></a>
-                    <a class="connections__phone" href="tel:+78142332211">+38093 735 78 35 - Роман</a>
-        </div>
 
-        <div class="shedule">
-            <span class="shedule__header">Працюємо:</span>
-            <span class="shedule__text">ПН-ПТ з 10:00 до 18:00, СБ з 11:00 до 15:00</span>
-            <span class="necessary">При необхідності, можливий запис на інші години, обговорюєтся індивідуально.</span>
+        <div class="connections-shedule">
+            <div class="connections">
+                <span>Консультація та запис на прийом:</span>
+                <div class='connections-container'>
+                    <a title="Telegram" href="tg://resolve?domain=@RomanM1989">
+                        <img class="connections__img"
+                            src="./img/connections.jpg" alt="images"
+                        />
+                    </a>
+                    <a class="connections__phone" href="tel:+380937357835">+38093 735 78 35 - Роман</a>
+                </div>
+
+            </div>
+
+            <div class="shedule">
+                <span class="shedule__header">Працюємо:</span>
+                <span class="shedule__text">ПН-ПТ з 10:00 до 18:00, СБ з 11:00 до 15:00</span>
+                <span class="necessary">При необхідності можливий запис на інші години, обговорюєтся індивідуально.</span>
+            </div>
         </div>
         <span>Адреса: м. Стрий, вулиця Поштова 16, кабінет 1</span>
+
         <hr>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.9327594157767!2d23.851860815688607!3d49.258720379328764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473a69f5e25db0a7%3A0xae10aef16ebb5fb7!2z0LLRg9C70LjRhtGPINCf0L7RiNGC0L7QstCwLCAxNiwg0KHRgtGA0LjQuSwg0JvRjNCy0ZbQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCA4MjQwMA!5e0!3m2!1suk!2sua!4v1600612802336!5m2!1suk!2sua"
@@ -57,12 +67,10 @@
 
         <footer>
             <div class="container">
-                <img class="footer__img" src="./img/mail.webp" alt="">
-                <a class="footer__text" href="mailto:stryidentistry@gmail.com">stryidentistry@gmail.com</a>
+                <img class="footer-img" src="./img/mail.webp" alt="image" />
+                <a class="footer-text" href="mailto:stryidentistry@gmail.com">stryidentistry@gmail.com</a>
             </div>
-
         </footer>
-
 
     </div>
 </body>
