--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span class="about__header">Лікарі:</span>
             <div class="doctors">
                 <div class="photo">
-                    <img class="photo__img" src="./img/Roman.JPG" alt="photo">
+                    <img class="photo__img" src="./img/Roman.jpg" alt="photo">
                     <span class="photo__text">Марченко Роман Олегович, лікар-стоматолог з 2012 року.</span>
                 </div>
                 <div class="photo">
