--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dentist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" />
@@ -20,7 +20,7 @@
 
         <div class="connections-shedule">
             <div class="connections">
-                <span>Консультація та запис на прийом:</span>
+                <span class="connections__text">Консультація та запис на прийом:</span>
                 <div class='connections-container'>
                     <a title="Telegram" href="tg://resolve?domain=@RomanM1989">
                         <img class="connections__img"
@@ -34,11 +34,11 @@
 
             <div class="shedule">
                 <span class="shedule__header">Працюємо:</span>
-                <span class="shedule__text">ПН-ПТ з 10:00 до 18:00, СБ з 11:00 до 15:00</span>
+                <span class="shedule__text">ПН-ПТ з 10:00 до 18:00, <br> СБ з 11:00 до 15:00</span>
                 <span class="necessary">При необхідності можливий запис на інші години, обговорюєтся індивідуально.</span>
             </div>
         </div>
-        <span>Адреса: м. Стрий, вулиця Поштова 16, кабінет 1</span>
+        <span class="adress">Адреса: м. Стрий, вулиця Поштова 16, кабінет 1</span>
 
         <hr>
         <iframe
