--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
 </head>
 
 <body>
@@ -23,9 +24,7 @@
                 <span class="connections__text">Консультація та запис на прийом:</span>
                 <div class='connections-container'>
                     <a title="Telegram" href="tg://resolve?domain=@RomanM1989">
-                        <img class="connections__img"
-                            src="./img/connections.jpg" alt="images"
-                        />
+                        <img class="connections__img" src="./img/connections.jpg" alt="images" />
                     </a>
                     <a class="connections__phone" href="tel:+380937357835">+38093 735 78 35 - Роман</a>
                 </div>
@@ -35,7 +34,8 @@
             <div class="shedule">
                 <span class="shedule__header">Працюємо:</span>
                 <span class="shedule__text">ПН-ПТ з 10:00 до 18:00, <br> СБ з 11:00 до 15:00</span>
-                <span class="necessary">При необхідності можливий запис на інші години, обговорюєтся індивідуально.</span>
+                <span class="necessary">При необхідності можливий запис на інші години, обговорюєтся
+                    індивідуально.</span>
             </div>
         </div>
         <span class="adress">Адреса: м. Стрий, вулиця Поштова 16, кабінет 1</span>
@@ -60,7 +60,8 @@
                     <span class="photo__text">Марченко Наталія Іванівна, зубний лікар з 1986 року.</span>
                 </div>
             </div>
-            <span>Виконуємо широкий спектр якісних стоматологічних послуг за доступними цінами. Із запитаннями звертайтесь, будь ласка, у зручний для вас спосіб :)</span>
+            <span>Виконуємо широкий спектр якісних стоматологічних послуг за доступними цінами. Із запитаннями
+                звертайтесь, будь ласка, у зручний для вас спосіб :)</span>
         </div>
 
         <hr>
