--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="connections">
                 <span class="connections__text">Консультація та запис на прийом:</span>
                 <div class='connections-container'>
-                    <a title="Telegram" href="tg://resolve?domain=@RomanM1989">
+                    <a title="Telegram" href="tg://resolve?domain=RomanM1989">
                         <img class="connections__img" src="./img/connections.jpg" alt="images" />
                     </a>
                     <a class="connections__phone" href="tel:+380937357835">+38093 735 78 35 - Роман</a>
