--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     індивідуально.</span>
             </div>
         </div>
-        <span class="adress">Адреса: м. Стрий, вулиця Поштова 16, кабінет 1</span>
+        <span class="adress">Адреса: м. Стрий, вулиця Поштова 16, кабінет 1 (офісний центр CityCentre)</span>
 
         <hr>
         <iframe
