--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dentist</title>
+    <title>Стоматологія у Стрию</title>
+    <meta name="Description"
+        content="Надаємо якісні стоматологічні послуги за доступними цінами: фотополімерні пломби, керамічні коронки, знімні протези, видалення, професійна гігієна">
+    <meta name="Robots" content="ALL"> 
+    <meta name="Revisit-After" content="1 Days">
+    <meta name="Author" content="Марченко Роман">
+    <meta name="Keywords" content="стоматолог, Стрий, пломба, зуби, зубна коронка, місток, консультація, гігієна">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" />
