--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="Robots" content="ALL"> 
     <meta name="Revisit-After" content="1 Days">
     <meta name="Author" content="Марченко Роман">
-    <meta name="Keywords" content="стоматолог, Стрий, пломба, зуби, зубна коронка, місток, консультація, гігієна">
+    <meta name="Keywords" content="стоматолог, стоматологічна клініка Стрий, пломба, зуби, зубна коронка, місток, консультація, гігієна">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" />
@@ -71,6 +71,15 @@
         </div>
 
         <hr>
+
+        <div class="documents">
+            Документи:
+            <img class="documents__img" src="img/diploma.jpg" alt="diploma">
+            <img class="documents__img" src="img/license.jpg" alt="license">
+            <img class="documents__img" src="img/certificate1.jpg" alt="certificate1">
+            <img class="documents__img" src="img/thanks-letter.jpg" alt="thanks-letter">
+        </div>
+
 
         <footer>
             <div class="container">
