--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Стоматологія у Стрию</title>
     <meta name="Description"
         content="Надаємо якісні стоматологічні послуги за доступними цінами: фотополімерні пломби, керамічні коронки, знімні протези, видалення, професійна гігієна">
-    <meta name="Robots" content="ALL"> 
+    <meta name="Robots" content="ALL">
     <meta name="Revisit-After" content="1 Days">
     <meta name="Author" content="Марченко Роман">
-    <meta name="Keywords" content="стоматолог, стоматологічна клініка Стрий, пломба, зуби, зубна коронка, місток, консультація, гігієна">
+    <meta name="Keywords"
+        content="стоматолог, стоматологічна клініка Стрий, пломба, зуби, зубна коронка, місток, консультація, гігієна">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" />
@@ -66,8 +67,15 @@
                     <span class="photo__text">Марченко Наталія Іванівна, зубний лікар з 1986 року.</span>
                 </div>
             </div>
-            <span>Виконуємо широкий спектр якісних стоматологічних послуг за доступними цінами. Із запитаннями
-                звертайтесь, будь ласка, у зручний для вас спосіб :)</span>
+            <span>Я, Марченко Роман Олегович, народився 17 червня 1989 року у місті Трускавець Львівської області. У
+                2007 році закінчив навчання у школі N7 м. Стрий. Цього ж року поступив на навчання у Львівський
+                Національний Університет імені Данила Галицького за фахом Стоматологія. У 2012 році закінчив університет
+                та почав займатись стоматологічною практикою, також поступив на інтернатуру в Ужгородський Національний
+                Університет, котру закінчив у 2014 році. На даний момент працюю у місті Стрий вже понад 6 років.
+                Постійно вчусь, удосконалюю свої знання та навички, переймаю досвід від інших лікарів. Зокрема
+                практикувався у клініках в містах Чернівці, Мостиська, Сквира, Дубляни, Буськ. Також приймаю участь у
+                волонтерській діяльності з надання безкоштовної стоматологічної допомоги нашим військовим в зоні бойових
+                дій завдяки Всеукраїнській спілці стоматологів та організації ТриЗуб Дентал.</span>
         </div>
 
         <hr>
