--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Стоматологія у Стрию</title>
     <meta name="Description"
         content="Надаємо якісні стоматологічні послуги за доступними цінами: фотополімерні пломби, керамічні коронки, знімні протези, видалення, професійна гігієна">
-    <meta name="Robots" content="ALL">
+    <meta name="Robots" content="ALL"> 
     <meta name="Revisit-After" content="1 Days">
     <meta name="Author" content="Марченко Роман">
-    <meta name="Keywords"
-        content="стоматолог, стоматологічна клініка Стрий, пломба, зуби, зубна коронка, місток, консультація, гігієна">
+    <meta name="Keywords" content="стоматолог, стоматологічна клініка Стрий, пломба, зуби, зубна коронка, місток, консультація, гігієна">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" />
