--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 Постійно вчусь, удосконалюю свої знання та навички, переймаю досвід від інших лікарів. Зокрема
                 практикувався у клініках в містах Чернівці, Мостиська, Сквира, Дубляни, Буськ. Також приймаю участь у
                 волонтерській діяльності з надання безкоштовної стоматологічної допомоги нашим військовим в зоні бойових
-                дій завдяки Національний спілці стоматологів та організації ТриЗуб Дентал.</span>
+                дій завдяки Національний Спілці Стоматологів та організації ТриЗуб Дентал.</span>
         </div>
 
         <hr>
