--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     індивідуально.</span>
             </div>
         </div>
+        <br>
+        <a class="info" href="https://www.facebook.com/stryidentistry/">Aктуальні акції, пропозиції та фото робіт ТУТ :)</a>
         <span class="adress">Адреса: м. Стрий, вулиця Поштова 16, кабінет 1 (офісний центр CityCentre)</span>
 
         <hr>
